add_subdirectory(about)
add_subdirectory(stringlist)
add_subdirectory(setupconnectionsdlg)
add_subdirectory(cryptodlg)
add_subdirectory(communication)
add_subdirectory(configdlg)
add_subdirectory(fmwaredlg)
add_subdirectory(msgitemsmodel)
add_subdirectory(debugdlg)
add_subdirectory(servicedlg)
add_subdirectory(network_configuring)
add_subdirectory(network)
add_subdirectory(settings)
add_subdirectory(instruments/test)
add_subdirectory(instruments/firmware)
add_subdirectory(stations/activate_control_lines)
add_subdirectory(message_box)
add_subdirectory(type_list)
add_subdirectory(save_project)
add_subdirectory(send_configuration)
add_subdirectory(limit_rows)
